成功两个 java 项目之间实现 dubbo 调用

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>yuni-common</module>
         <module>yuni-core</module>
         <module>yuni-breq</module>
+        <module>yuni-api</module>
     </modules>
 
 </project>
