--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "yuni_python_utils_service"]
 	path = yuni_python_utils_service
-	url = ./yuni_python_utils_service
+	url = git@github.com:liyuier/yuni_python_utils_service.git
