1. 插件构建时采用数字作为插件 ID，原插件 ID 改为插件 name 2. 给原来的 http 调用工具类套一层 3. 优化打印日志的内容

--- a/yuni-core/src/main/resources/example.yml
+++ b/yuni-core/src/main/resources/example.yml
@@ -23,6 +23,10 @@ dubbo:
     id: nacos-registry
     address: nacos://localhost:8848
 
+logging:
+  level:
+    org.apache.dubbo: WARN
+
 mybatis-plus:
   configuration:
     # 日志
